--- a/templates/main.html
+++ b/templates/main.html
@@ -33,5 +33,6 @@
 {% include 'header.html'%}
 {% include 'nav.html'%}
 {% block "content" %}{% endblock "content" %}
+{% block login %}{% endblock login %}
 {% include 'info.html'%}
 {% include 'footer.html'%}
