--- a/templates/rec.html
+++ b/templates/rec.html
@@ -16,23 +16,24 @@
       <div class="layout_padding2-top">
         <div class="row">
           <div class="col-lg-4 offset-lg-2 col-md-5 offset-md-1">
-            <form action="">
+            <form action="leave_feedback/" method="post">
+              {% csrf_token %}
               <div class="contact_form-container">
                 <div>
                   <div>
-                    <input type="text" placeholder="Full Name" />
+                    <input type="text" placeholder="Full Name" name="full_name" required/>
                   </div>
                   <div>
-                    <input type="email" placeholder="Email" />
+                    <input type="email" placeholder="Email" name="sender" id="id_sender" required/>
                   </div>
                   <div>
-                    <input type="text" placeholder="Phone Number" />
+                    <input type="text" placeholder="Phone Number" name="phone" id="id_phone"/>
                   </div>
                   <div>
-                    <input type="text" class="message_input" placeholder="Message" />
+                    <input type="text" class="message_input" placeholder="Message" textarea name="message" id="id_message" required/>
                   </div>
                   <div>
-                    <button type="submit">
+                    <button type="submit" value="Submit">
                       Send
                     </button>
                   </div>
@@ -43,7 +44,7 @@
           <div class="col-md-6 px-0">
             <div class="map_container">
               <div class="map-responsive">
-                <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:EkFPbGVrc2FuZHJhIEJpZG5vaG8gU3QsIFBvbHRhdmEsIFBvbHRhdnMna2Egb2JsYXN0LCBVa3JhaW5lLCAzNjAwMCIuKiwKFAoSCVUtOHWCL9hAEQnIJ3hbADvNEhQKEglruuYl5CXYQBGCyuS532s-zw&key=AIzaSyBmvu8JwrG0LRyYqiy1j-NKdvReRarfYFc" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
               </div>
             </div>
           </div>
