--- a/templates/shop_rd.html
+++ b/templates/shop_rd.html
@@ -17,7 +17,7 @@
               </h2>
             </div>
             <p>
-              I inspire in everything around me that provides color. Sometimes something unexpectable makes your bouguet unique and original.
+              I'm usually inspired of everything around me that provides color. Sometimes something unexpectable makes your bouguet unique and original.
             </p>
             <a href="">
               Buy now
