--- a/templates/client.html
+++ b/templates/client.html
@@ -17,64 +17,20 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  John Doe
+                  {{feedbacks.full_name}}
                 </h5>
                 <p>
                   <img src="/static/images/left-quote.png" alt="">
                   <span>
-                    I have never been happier 
+                  {{feedbacks.message}}...
                   </span>
                   <img src="/static/images/right-quote.png" alt=""> <br>
-                  Everything I want to say - just buy it
+                  {{feedbacks.message}}
                 </p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="client_container layout_padding-top">
-              <div class="img-box">
-                <img src="/static/images/client-img.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Jone Mark
-                </h5>
-                <p>
-                  <img src="/static/images/left-quote.png" alt="">
-                  <span>
-                    Lorem ipsum dolor sit amet,
-                  </span>
-                  <img src="/static/images/right-quote.png" alt=""> <br>
-                  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                  veniam, quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="client_container layout_padding-top">
-              <div class="img-box">
-                <img src="/static/images/client-img.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Jone Mark
-                </h5>
-                <p>
-                  <img src="/static/images/left-quote.png" alt="">
-                  <span>
-                    Lorem ipsum dolor sit amet,
-                  </span>
-                  <img src="/static/images/right-quote.png" alt=""> <br>
-                  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                  veniam, quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+
         <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
           <span class="sr-only">Previous</span>
         </a>
@@ -82,7 +38,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
     </div>
   </section>
 </html>
