--- a/templates/main.html
+++ b/templates/main.html
@@ -34,5 +34,6 @@
 {% include 'nav.html'%}
 {% block "content" %}{% endblock "content" %}
 {% block login %}{% endblock login %}
+{% block cart %}{% endblock cart %}
 {% include 'info.html'%}
 {% include 'footer.html'%}
