--- a/templates/client.html
+++ b/templates/client.html
@@ -10,27 +10,31 @@
       </div>
       <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          {% for feed in feedbacks %}
+          <div class="carousel-item {% if forloop.first %}active{%endif%}">
             <div class="client_container layout_padding-top">
               <div class="img-box">
                 <img src="/static/images/client-img.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  {{feedbacks.full_name}}
+                  {{feed.full_name}}
                 </h5>
                 <p>
                   <img src="/static/images/left-quote.png" alt="">
                   <span>
-                  {{feedbacks.message}}...
+                    {{feed.message|slice:":5"}}
                   </span>
                   <img src="/static/images/right-quote.png" alt=""> <br>
-                  {{feedbacks.message}}
+                  {{feed.message}}
                 </p>
               </div>
             </div>
+            {% endfor %}
           </div>
-
+        </div>
+      </div>
+    </div>
         <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
           <span class="sr-only">Previous</span>
         </a>
