--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,7 +25,7 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Cart</a>
+                  <a class="nav-link" href="{% url "list-cartitem" %}">Cart</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="">Hi, {{ user.username }}!</a>
