--- a/posy/templates/shop.html
+++ b/posy/templates/shop.html
@@ -29,7 +29,7 @@
               {{good.title}} - <strong>{{good.price}}</strong>
             </h5>
             <p>{{good.description}}</p>
-            <a href="{% url 'create-cartitem' %}"> Buy Now </a> 
+            <a href=""> Buy Now </a> 
             <p></p>
             <a href=""> Read more </a>
           </div>
