--- a/shopping_cart/templates/unicorn/cart.html
+++ b/shopping_cart/templates/unicorn/cart.html
@@ -1,4 +1,3 @@
-{% block cart %}
 <section>
   <button id="buttonBasket" title="Go to basket"></button>
 <div class="fruit_section layout_padding col-xl-auto">
@@ -8,6 +7,7 @@
       <hr>
     </div>
   </div>
+  {% block cart %}
   <div class="container-fluid">
     <div class="shop_cart-container">
       {% for product in products %}
@@ -20,6 +20,7 @@
         </p>
           <p>{{product.description}}</p>
           {% if request.user.is_authenticated %}
+          {{user.pk}}
           <button class="myButton" unicorn:click="add_item( {{product.pk}} )"> В кошик </button>
           {%else%}
           <a class="myButton" href="{% url "login" %}"> В кошик </a>
@@ -60,7 +61,7 @@
     </div>
     <div class="modal-footer">
       <h3>Всього {{total}}</h3>
-      <a class="myButtonConfirm" href="{% url "confirm" %}">Підтвердити</button>
+      <button class="myButtonConfirm" unicorn:click="confirm( {{request.user.pk}} )">Підтвердити</button>
     </div>
   </div>
     {%else%}
