--- a/shopping_cart/templates/unicorn/cart.html
+++ b/shopping_cart/templates/unicorn/cart.html
@@ -61,7 +61,7 @@
     </div>
     <div class="modal-footer">
       <h3>Всього {{total}}</h3>
-      <button class="myButtonConfirm" unicorn:click="confirm( {{request.user.pk}} )">Підтвердити</button>
+      <a class="myButtonConfirm" href="">Підтвердити</button>
     </div>
   </div>
     {%else%}
