--- a/templates/client.html
+++ b/templates/client.html
@@ -23,7 +23,7 @@
                 <p>
                   <img src="/static/images/left-quote.png" alt="">
                   <span>
-                    {{feed.message|slice:":5"}}
+                    {{feed.message|slice:":25"}}...
                   </span>
                   <img src="/static/images/right-quote.png" alt=""> <br>
                   {{feed.message}}
