--- a/templates/preview.html
+++ b/templates/preview.html
@@ -19,7 +19,7 @@
             <h5>
               {{product.title}} - <strong>{{product.price}}</strong>
             </h5>
-            <a href="{% url "cart" %}">
+            <a href="{% url "store:store" %}">
               В магазин
             </a>
           </div>
