--- a/templates/shop_rd.html
+++ b/templates/shop_rd.html
@@ -19,7 +19,7 @@
             <p>
               Я все ще можу вас здивувати
             </p>
-            <a href="{% url 'cart'%}">
+            <a href="{% url 'store:store'%}">
               Обрати готовий букет
             </a>
           </div>
