--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,6 @@
  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
  <!-- Custom styles for this template -->
  {% load static %}
- {% load unicorn %}
  {% csrf_token %}
  <!-- slider stylesheet -->
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -30,13 +29,13 @@
 <script src="{% static '/js/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static '/js/bootstrap.js' %}"></script>
 <script src="{% static '/js/custom.js' %}"></script>
-{% unicorn_scripts %}
 {% include 'header.html'%}
 {% include 'nav.html'%}
 {% block "content" %}{% endblock "content" %}
 {% block login %}{% endblock login %}
+{% block checkout %}{% endblock checkout %}
 {% block cart %}{% endblock cart %}
-{% block confirm %}{% endblock confirm %}
+{% block store %}{% endblock store %}
 {% include 'info.html'%}
 <script src="{% static '/js/popup.js' %}"></script>
 {% include 'footer.html'%}
