--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,10 +12,10 @@
             <div class="d-flex  flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="{% url "home" %}">Головна </a>
+                  <a class="nav-link" href="{% url "posy:home" %}">Головна </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url "cart" %}"> Магазин </a>
+                  <a class="nav-link" href="{% url "store:store" %}"> Магазин </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="">Відгуки</a>
@@ -25,14 +25,18 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
+                  <a class="nav-link" href="{%url 'store:order-summary' %}">Кошик</a>
+                </li>
+                <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link" href="">Привіт, {{ user.username }}!</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url "logout" %}" action='signout'>Вийти</a>
+                  <a class="nav-link" href="{% url "posy:logout" %}" action='signout'>Вийти</a>
                 </li>
                   {% else %}
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url "login" %}">Увійти</a>
+                    <a class="nav-link" href="{% url "posy:login" %}">Увійти</a>
                   </li>
                   {% endif %}
                 </li>
