--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,54 @@
 <!DOCTYPE html>
 <html>
-<section class="container-fluid footer_section ">
+<section class="info_section layout_padding">
+    <div class="container">
+      <div class="info_logo">
+        <h2>
+          Posy Shop
+        </h2>
+      </div>
+      <div class="info_contact">
+        <div class="row">
+          <div class="col-md-4">
+            <a href="">
+              <img src="/static/images/location.png" alt="">
+              <span>
+                Як мене знайти
+              </span>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="">
+              <img src="/static/images/call.png" alt="">
+              <span>
+                Телефон: +38-050-193-59-09
+              </span>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <div class="info_social">
+              <div>
+                <a href="">
+                  <img src="/static/images/facebook-logo-button.png" alt="">
+                </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="/static/images/instagram.png" alt="">
+              </a>
+            </div>
+            <a href="">
+              <img src="/static/images/mail.png" alt="">
+              <span>
+                v.emomova@ukr.net
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container-fluid footer_section ">
     <p>
       &copy; <span id="displayYear"></span> All Rights Reserved. Design by
       <a href="https://html.design/">Free Html Templates</a>
