--- a/templates/main.html
+++ b/templates/main.html
@@ -18,14 +18,13 @@
  {% csrf_token %}
  <!-- slider stylesheet -->
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
-
+ <link rel="shortcut icon" type="image/png" href="{% static '/images/favicon.ico' %}"/>
 <Link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.css' %}">
 <Link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">
 <Link rel="stylesheet" href="{% static '/css/responsive.css' %}">
 <Link rel="stylesheet" href="{% static '/css/style.css' %}">
 <Link rel="stylesheet" href="{% static '/css/style.scss' %}">
 <Link rel="stylesheet" href="{% static '/css/style.css.map' %}">
-
 <script src="{% static '/js/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static '/js/bootstrap.js' %}"></script>
 <script src="{% static '/js/custom.js' %}"></script>
