--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,10 +18,7 @@
                   <a class="nav-link" href="{% url "store:store" %}"> Магазин </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Відгуки</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Контакти</a>
+                  <a class="nav-link" href="">Оплата і контакти</a>
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
