--- a/store/templates/create_composition.html
+++ b/store/templates/create_composition.html
@@ -8,14 +8,11 @@
 <form method="POST" class="card-body">
     {% csrf_token %}
     {%for field in form%}
-    <div class="col-lg-12 col-md-12 mb-4">
-        {{ field }}
-        <label>{{ field.label }}</label>
+    <div {class="col-lg-12 col-md-12 mb-4"}>{{ field }}&nbsp;&nbsp;<label class="toggle" for="uniqueID">{{ field.label }}</label>
+
         <div class="invalid-feedback">
             Обов'язкове поле
           </div>
-        </div>
-        <div class="row">
         </div>
         <hr>
       {%endfor%}
