--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <section class="info_section layout_padding">
-    <div class="container">
+    <div id="footer" class="container">
       <div class="info_logo">
         <h2>
           Posy Shop
@@ -10,7 +10,7 @@
       <div class="info_contact">
         <div class="row">
           <div class="col-md-4">
-            <a href="">
+            <a href="https://goo.gl/maps/qVS1nFsPtc6P7JXA8">
               <img src="/static/images/location.png" alt="">
               <span>
                 Як мене знайти
@@ -18,7 +18,6 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="">
               <img src="/static/images/call.png" alt="">
               <span>
                 Телефон: +38-050-193-59-09
@@ -28,30 +27,22 @@
           <div class="col-md-4">
             <div class="info_social">
               <div>
-                <a href="">
+                <a href="https://www.facebook.com/v.emomova">
                   <img src="/static/images/facebook-logo-button.png" alt="">
                 </a>
             </div>
             <div>
-              <a href="">
+              <a href="https://instagram.com/viktoriiaemomova">
                 <img src="/static/images/instagram.png" alt="">
               </a>
             </div>
-            <a href="">
               <img src="/static/images/mail.png" alt="">
               <span>
                 v.emomova@ukr.net
               </span>
-            </a>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <section class="container-fluid footer_section ">
-    <p>
-      &copy; <span id="displayYear"></span> All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
   </section>
 </html>
