--- a/templates/rec.html
+++ b/templates/rec.html
@@ -42,7 +42,7 @@
             </form>
           </div>
           <div class="col-md-6 px-0">
-            <div class="map_container">
+            <div class="map_container" id="map">
               <div class="map-responsive">
                 <iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:EkFPbGVrc2FuZHJhIEJpZG5vaG8gU3QsIFBvbHRhdmEsIFBvbHRhdnMna2Egb2JsYXN0LCBVa3JhaW5lLCAzNjAwMCIuKiwKFAoSCVUtOHWCL9hAEQnIJ3hbADvNEhQKEglruuYl5CXYQBGCyuS532s-zw&key=AIzaSyBmvu8JwrG0LRyYqiy1j-NKdvReRarfYFc" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
               </div>
