--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -41,6 +41,12 @@
                 <label class="custom-control-label" for="{{ name }}">{{ name }}</label>
               </div>
               {% endfor %}
+              <p></p>
+              <p style="color:Tomato;">
+                <b>
+                ВАЖЛИВО! Незалежно від обраної форми оплати, виконання замовлень відбувається тілльки за умови 100% передплати!Доставка замовлення по Полтаві сплачується окремо, вартість за тарифами кур'єрської служби.  Доставка в інші міста - за вашим бажанням, майте на увазі, що служби доставки не гарантують збереження презентабельного вигляду букета.
+                </b>
+              </p>
             </div>
            
             <hr class="mb-4">
