--- a/store/templates/create_composition.html
+++ b/store/templates/create_composition.html
@@ -16,6 +16,11 @@
         </div>
         <hr>
       {%endfor%}
+      <p style="color:Tomato;">
+        <b>
+        ВАЖЛИВО! Виконання замовлень відбувається тілльки за умови 100% передплати!Доставка замовлення по Полтаві сплачується окремо, вартість за тарифами кур'єрської служби.  Доставка в інші міста - за вашим бажанням, майте на увазі, що служби доставки не гарантують збереження презентабельного вигляду букета.
+        </b>
+      </p>
     <input class="myButton bg-warning" type="submit" value="Відправити">
 </form>
 {% endblock composition %}
