--- a/templates/put.html
+++ b/templates/put.html
@@ -5,7 +5,7 @@
       <div class="box">
         <div class="detail-box">
           <h2>
-            Posy shop
+            Posy shop в Полтаві
           </h2>
           <p>
             Мене звати Вікторія, робити цікаві букети - моя пристрасть. Я знаходжу натхнення у будь-яких речах навколо, що грають барвами. Якщо ви не знайшли те, що шукаєте, зв'яжіться зі мною, і ми створимо ваш індивідуальний букет!
@@ -25,7 +25,7 @@
           <form action=""  method="POST">
             {%csrf_token%}
             <input method="POST" type="text" placeholder="Залиште свій телефон" value="{{form}}" name="phone_number" required id="id_phone_number">
-            <input class="myButton" type="submit" value="Передзвоніть мені">
+            <input class="btn-box" type="submit" value="Передзвоніть мені">
           </form>
         </div>
       </div>
