--- a/templates/shop_rd.html
+++ b/templates/shop_rd.html
@@ -13,11 +13,14 @@
             <div class="heading_container">
               <hr>
               <h2>
-                Повірте мені...
+                Композиції з квітів, фруктів, цукерок те не тільки
               </h2>
             </div>
             <p>
-              Я все ще можу вас здивувати
+              Якщо ви хочете подарувати оригінальний букет з цукерок в Полтаві, квітів, овочів або навіть сирів - я із задоволенням виконаю ваше замовлення. 
+              В магазині ви зможете знайти приклади букетів та приблизну вартість, яка в першу чергу залежить від сезону: взимку важко знайти полуницю, але попит на новорічні композиції з хвої та шишок стрімко зростає.
+              Якщо вам сподобалась якась з представлених композицій - ви можете зробити замовлення на сайті, після чого ми обговоримо деталі. Якщо ви не знайшли те, що шукаєте - перейдіть за посиланням вище
+              та залиште заявку на створення індивідуальної композиції. Ви можете обрати бажані інгрідієнти, кольорову гаму та зазначити всі ваші вимоги до майбутнього букету! 
             </p>
             <a href="{% url 'store:store'%}">
               Обрати готовий букет
