--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
     <div id="footer" class="container">
       <div class="info_logo">
         <h2>
-          Posy Shop
+          Posy Shop в Полтаві
         </h2>
       </div>
       <div class="info_contact">
