--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -39,8 +39,8 @@
         {% endfor %}
     </div>
     <b>
-    <div class="container-fluid">
-        <span class="link-box">
+    <div align="center">
+        <span class="">
           <p>
             <span class="">
                 Сторінка {{ page_obj.number }} з {{ page_obj.paginator.num_pages }}
